<resources>
    <string name="app_name">GoodsMent</string>

    //Headings
    <string name="heading_0ne">Choose your Destination</string>
    <string name="heading_two">Fast Delivery</string>
    <string name="heading_Three">Quick &amp; Easy Payments</string>

    //Descripition
    <string name="desc_one">nfjvjdvjdbehvbhvhebheb</string>
    <string name="desc_two">njdbchdbchbchdbhbvcjbvjdbvjdb</string>
    <string name="desc_three">Grow your Business by Accepting card payments with The New Card Reader</string>


    <string name="login_to_your_account">Login to your Account</string>
    <string name="goodsment">GoodsMent</string>
    <string name="sign_in">SIGN IN</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="please_enter_your_e_mail_address_to_recieve_a_verification_code">Please Enter Your E-Mail Address and  Receive  link on this email address.</string>
    <string name="send">Send</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_sign_in_with">- Or sign in with -</string>
    <string name="sign_up">SIGN UP</string>
    <string name="create_your_account">Create your Account</string>
    <string name="don_t_have_an_account">Don\'t have an Account ?</string>
    <string name="signup">Signup</string>
    <string name="signin">Sign in</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="labour_management">Labour Management</string>
    <string name="home">Home</string>
    <string name="vehicle_owner">Vehicle Owner</string>
    <string name="user">User</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="refund_return_policy"><![CDATA[Refund & Return Policy]]></string>
    <string name="logout">Logout</string>

    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="report">Report</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="enter_city">Enter City</string>

    <string name="privacypolicy">https://doc-hosting.flycricket.io/goodsment-privacy-policy/2de549b2-71d9-4c36-9ae5-2e69edabe1d8/privacy</string>
    <string name="fast_fast"><![CDATA[Fast & Safe]]></string>
    <string name="total_vehicle_owner">Total Vehicle Owner</string>
    <string name="total_revenue">Total Revenue</string>
    <string name="total_rides">Total Rides</string>
    <string name="total_user">Total User</string>
    <string name="_100000">1000</string>
    <string name="_100">100+</string>
    <string name="_200">20</string>
    <string name="_1000">1000+</string>
    <string name="name">Name</string>-->
    <string name="email">Email</string>-->
    <string name="contact">Contact</string>
    <string name="email_card_txt">email</string>
    <string name="name_card_txt">name</string>
    <string name="name_txt">Name :</string>
    <string name="email_txt">Email :</string>
    <string name="city_txt">City :</string>
    <string name="city_card_txt">city</string>
    <string name="contact_txt">Contact Number :</string>
    <string name="contact_card_txt">contact </string>
    <string name="adhracard_number_txt">Adhracard Number :</string>
    <string name="adhar_card_txt">adhar</string>
    <string name="address_txt">Address :</string>
    <string name="address_card_txt">address</string>
    <string name="name_labour_txt">Name :</string>
    <string name="name_card_labour_txt">name</string>
    <string name="contact_labour_txt">Conatct :</string>
    <string name="contact_card_labour_txt">contct</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="contact_number">Contact Number</string>
    <string name="city">City</string>
    <string name="mobile_number">Mobile Number :</string>
    <string name="mobilenumber">mobilenumber</string>
    <string name="plate_number">Plate Number :</string>
    <string name="platenumber">platenumber</string>
    <string name="aadhharcard_number">Aadhharcard Number:</string>
    <string name="vehicle_details">Vehicle Details :</string>
    <string name="vehicle_type">Vehicle Type :</string>
    <string name="type">type</string>
    <string name="vehicle_plate_number">Vehicle Plate Number :</string>
    <string name="palteno">palteno</string>
    <string name="driver_name">Driver Name :</string>
    <string name="drivername">drivername</string>
    <string name="driver_contact_number">Driver Contact Number :</string>
    <string name="dconatctno">dconatctno</string>
    <string name="vehicle_Type">Vehicle Type</string>
    <string name="type_txt">Type :</string>
    <string name="_2_wheeler">2-Wheeler</string>
    <string name="charge">Charge :</string>
    <string name="_20">20</string>
    <string name="change_vehicle_charge">Change Vehicle Charge</string>

</resources>
