<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:paddingTop="?attr/actionBarSize"
    app:cardCornerRadius="16dp"
    android:backgroundTint="@color/blue"
    android:layout_marginTop="8dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    app:cardElevation="20dp"
    android:id="@+id/recCard"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:text="@string/name_txt"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/recName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/name_card_txt"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_txt"
            android:textSize="16sp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/recemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:text="@string/email_card_txt"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_txt"
            android:textSize="16sp"
            android:layout_marginTop="55dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/reccontact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:layout_marginTop="55dp"
            android:text="@string/contact_card_txt"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_txt"
            android:textSize="16sp"
            android:layout_marginTop="80dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/reccity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:layout_marginTop="80dp"
            android:text="@string/city_card_txt"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>