<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    app:cardCornerRadius="20dp"
    android:elevation="10dp"
    android:layout_margin="15dp"
    android:orientation="vertical"
    android:id="@+id/cardVehicleType">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgVehicleType"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/cargotruck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:layout_gravity="left|center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="0.3"
                        android:text="@string/type_txt"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/vType"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/_2_wheeler"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="0.3"
                        android:text="@string/charge"
                        android:textSize="18sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/vCharge"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/_20"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/vEdit"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_edit"/>
    </RelativeLayout>


</androidx.cardview.widget.CardView>